--- a/.github/workflows/falcon_install.yml
+++ b/.github/workflows/falcon_install.yml
@@ -129,7 +129,7 @@ jobs:
         run: |
           sudo apt install apt-transport-https ca-certificates curl software-properties-common libssl-dev
           python -m pip install --upgrade pip
-          pip install molecule "molecule-plugins[ec2]" ansible ansible-core ansible-lint boto3 botocore
+          pip install -r .devcontainer/requirements.txt
 
       - name: Build/Install the collection
         uses: nick-fields/retry@v2
@@ -158,7 +158,7 @@ jobs:
           command: >-
             molecule --version &&
             ansible --version &&
-            molecule --debug test --destroy never -s ${{ matrix.collection_role }} -- -v
+            molecule test --destroy never -s ${{ matrix.collection_role }} -- -v
         continue-on-error: true
 
       - name: Ensure instances are destroyed
@@ -177,7 +177,7 @@ jobs:
           command: >-
             molecule --version &&
             ansible --version &&
-            molecule --debug destroy -s ${{ matrix.collection_role }}
+            molecule destroy -s ${{ matrix.collection_role }}
 
       - name: Assert molecule tests passed
         uses: nick-fields/assert-action@v1
