fix(falcon_configure): add missing when clause for mac task

--- a/roles/falcon_configure/tasks/configure.yml
+++ b/roles/falcon_configure/tasks/configure.yml
@@ -39,6 +39,7 @@
   ansible.builtin.stat:
     path: "/Applications/Falcon.app/Contents/Resources/falconctl"
   register: falconctl_mac
+  when: ansible_facts['distribution'] == "MacOSX"
 
 - name: MacOSX Block
   when:
