chore: bump to v3.3.3

--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -321,3 +321,16 @@ releases:
     - fix-become-issue-aid.yml
     - remove-host.yml
     release_date: '2023-09-11'
+  3.3.3:
+    changes:
+      bugfixes:
+      - update ansible meta information for certifiable requirements (https://github.com/CrowdStrike/ansible_collection_falcon/pull/405)
+      release_summary: '| Release Date: 2023-09-14
+
+        | `Release Notes: <https://github.com/CrowdStrike/ansible_collection_falcon/releases/tag/3.3.3>`__
+
+        '
+    fragments:
+    - 3.3.3.yml
+    - meta-update.yml
+    release_date: '2023-09-14'
