--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -334,3 +334,60 @@ releases:
     - 3.3.3.yml
     - meta-update.yml
     release_date: '2023-09-14'
+  4.0.0:
+    changes:
+      breaking_changes:
+      - falconpy - new collection requirements for authenticating with the CrowdStrike
+        Falcon API now require the falconpy sdk. All existing roles within the collection
+        have been ported over and should use the ``./requirements.txt`` file to get
+        started. (https://github.com/CrowdStrike/ansible_collection_falcon/pull/384)
+      bugfixes:
+      - cid_info - return the first element of the array (https://github.com/CrowdStrike/ansible_collection_falcon/pull/396)
+      - falcon_configure - add missing when clause for mac task (https://github.com/CrowdStrike/ansible_collection_falcon/pull/399)
+      minor_changes:
+      - auth - adds ``auth`` module to manage authentication with the Falcon API (https://github.com/CrowdStrike/ansible_collection_falcon/pull/384)
+      - cid_info - adds ``cid_info`` module to help retrieve CID with checksum (https://github.com/CrowdStrike/ansible_collection_falcon/pull/395)
+      - falcon_discover - adds a new dynamic inventory for the Discover service collection
+        (https://github.com/CrowdStrike/ansible_collection_falcon/pull/400)
+      - falcon_install - replaces existing API functionality with new modules (https://github.com/CrowdStrike/ansible_collection_falcon/pull/396)
+      - host_hide - adds ``host_hide`` module to hide/unhide hosts from the Falcon
+        console (https://github.com/CrowdStrike/ansible_collection_falcon/pull/399)
+      - sensor_download - adds ``sensor_download`` module to download sensor from
+        the Falcon API (https://github.com/CrowdStrike/ansible_collection_falcon/pull/396)
+      - sensor_download_info - adds ``sensor_download_info`` module to retrieve sensor
+        installers to download (https://github.com/CrowdStrike/ansible_collection_falcon/pull/396)
+      - sensor_policy_info - adds ``sensor_policy_info`` module to retrieve sensor
+        policy information from the CrowdStrike Falcon API (https://github.com/CrowdStrike/ansible_collection_falcon/pull/251)
+      release_summary: '| Release Date: 2023-09-15
+
+        | `Release Notes: <https://github.com/CrowdStrike/ansible_collection_falcon/releases/tag/4.0.0>`__
+
+        '
+    fragments:
+    - 4.0.0.yml
+    - v4-updates.yml
+    modules:
+    - description: Manage authentication
+      name: auth
+      namespace: ''
+    - description: Get CID with checksum
+      name: cid_info
+      namespace: ''
+    - description: Hide/Unhide hosts from the Falcon console
+      name: host_hide
+      namespace: ''
+    - description: Download Falcon Sensor Installer
+      name: sensor_download
+      namespace: ''
+    - description: Get information about Falcon Sensor Installers
+      name: sensor_download_info
+      namespace: ''
+    - description: Get information about Falcon Update Sensor Policies
+      name: sensor_update_policy_info
+      namespace: ''
+    plugins:
+      inventory:
+      - description: CrowdStrike Falcon Discover inventory source
+        name: falcon_discover
+        namespace: null
+    release_date: '2023-09-15'
