chore: 4.1.1 release assets

--- a/changelogs/fragments/discover-fix.yml
+++ b/changelogs/fragments/discover-fix.yml
@@ -1,2 +1,2 @@
 bugfixes:
-  - falcon_discover - fixed missing parameter for compose to work properly
+  - falcon_discover - fixed missing parameter for compose to work properly (https://github.com/CrowdStrike/ansible_collection_falcon/pull/413)
