--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -434,3 +434,16 @@ releases:
     - 4.1.2.yml
     - fix-eu-mapping.yml
     release_date: '2023-09-19'
+  4.1.3:
+    changes:
+      bugfixes:
+      - falcon_configure - fix main task call to auth task (https://github.com/CrowdStrike/ansible_collection_falcon/pull/418)
+      release_summary: '| Release Date: 2023-09-22
+
+        | `Release Notes: <https://github.com/CrowdStrike/ansible_collection_falcon/releases/tag/4.1.3>`__
+
+        '
+    fragments:
+    - 4.1.3.yml
+    - fix-configure-role.yml
+    release_date: '2023-09-22'
