--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -447,3 +447,16 @@ releases:
     - 4.1.3.yml
     - fix-configure-role.yml
     release_date: '2023-09-22'
+  4.2.0:
+    changes:
+      minor_changes:
+      - eventstream plugin - add user-agent string (https://github.com/CrowdStrike/ansible_collection_falcon/pull/426)
+      release_summary: '| Release Date: 2023-10-19
+
+        | `Release Notes: <https://github.com/CrowdStrike/ansible_collection_falcon/releases/tag/4.2.0>`__
+
+        '
+    fragments:
+    - 4.2.0.yml
+    - user-agent.yml
+    release_date: '2023-10-19'
