Do not throw errors when running install and configure roles in Ansible check mode

--- a/roles/falcon_configure/tasks/configure.yml
+++ b/roles/falcon_configure/tasks/configure.yml
@@ -28,6 +28,7 @@
         state: "{{ falcon_service_state | default('restarted') }}"
         enabled: yes
       when:
+        - not ansible_check_mode
         - info.falconctl_info.cid
         - falconctl_result.changed
       become: yes
