Download one time only

--- a/roles/falcon_install/tasks/api.yml
+++ b/roles/falcon_install/tasks/api.yml
@@ -69,6 +69,7 @@
   changed_when: false
   register: falcon_sensor_download
   delegate_to: localhost
+  run_once: true
 
 - name: CrowdStrike Falcon | Copy Sensor Installation Package to remote host (non-windows)
   ansible.builtin.copy:
