chore: ensure tags on cicd hosts to allow cleanup on console
Fixes #424

This PR ensures that sensors installed during ci/cd runs have the same grouping tags applied.
This will make it easier to clean up on the console side.

--- a/molecule/falcon_configure/converge.yml
+++ b/molecule/falcon_configure/converge.yml
@@ -11,7 +11,7 @@
         falcon_option_set: yes
         falcon_cid: "{{ lookup('env', 'FALCON_CID') }}"
         falcon_provisioning_token: '12345678'
-        falcon_tags: 'falcon,example,tags'
+        falcon_tags: 'molecule,testing'
         falcon_billing: 'metered'
         falcon_message_log: yes
         falcon_backend: 'kernel'
