--- a/molecule/falcon_uninstall/prepare.yml
+++ b/molecule/falcon_uninstall/prepare.yml
@@ -38,3 +38,4 @@
       vars:
         falcon_client_id: "{{ lookup('env', 'FALCON_CLIENT_ID') }}"
         falcon_client_secret: "{{ lookup('env', 'FALCON_CLIENT_SECRET') }}"
+        falcon_tags: 'molecule,testing'
