--- a/.devcontainer/requirements.txt
+++ b/.devcontainer/requirements.txt
@@ -14,6 +14,6 @@ pywinrm
 wheel
 ansible-rulebook
 ansible-runner
-aiohttp==3.8.5
-crowdstrike-falconpy==1.3.0
+aiohttp
+crowdstrike-falconpy==1.4.1
 tox
