chore: update eda plugin with lint changes

--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,3 @@
-# Recommended usage of this file is detailed in https://github.com/ansible/eda-partner-testing/blob/main/README.md.
 [tox]
 envlist = ruff, darglint, pylint
 skipsdist = true
@@ -15,22 +14,14 @@ commands =
 [testenv:ruff]
 deps = ruff
 commands =
-    bash -c 'ruff check --exclude .tox --select ALL --ignore INP001,RUF100,E501,FA100,FA102,PLR0913,PERF203,BLE001 -q extensions/eda/plugins'
+    bash -c 'ruff check --exclude .tox --select ALL --ignore INP001,FA102,UP001,UP010,I001,FA100,PLR0913,E501 -q extensions/eda/plugins'
 
 [testenv:darglint]
 deps = darglint
 commands =
     bash -c 'darglint -s numpy -z full extensions/eda/plugins'
 
-[testenv:isort]
-deps = isort
-commands = isort {toxinidir}
-
-[testenv:black]
-deps = black
-commands = black {toxinidir}
-
 [testenv:pylint]
 deps = pylint
 commands =
-    bash -c 'find ./extensions/eda/plugins -name "*.py" -print0 | xargs -0 pylint --output-format=parseable -sn --disable R0801,R0903,R0913,W0105'
+    bash -c 'find ./extensions/eda/plugins -name "*.py" -print0 | xargs -0 pylint --output-format=parseable -sn --disable R0801,E0401,C0103,R0913,R0902,R0903'
