--- a/.github/workflows/eda-lint.yml
+++ b/.github/workflows/eda-lint.yml
@@ -14,16 +14,14 @@ jobs:
   tox:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Install dependencies
-      run: |
-        sudo apt-get update -y
-        sudo apt-get install jq libyaml-dev git build-essential findutils libsystemd-dev -y
-        sudo python3 -m pip install tox
-        sudo python3 -m pip install --upgrade --ignore-installed PyYAML
-        sudo python3 -m pip install --upgrade pip
-        sudo python3 -m pip install --upgrade virtualenv
-        sudo python3 -m pip install --upgrade setuptools
-    - name: Run tox
-      run: |
-        tox
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+      - name: Install tox
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install tox
+      - name: Run tox
+        run: |
+          tox
