--- a/.pylintrc
+++ b/.pylintrc
@@ -161,6 +161,8 @@ disable=raw-checker-failed,
         too-few-public-methods,
         useless-object-inheritance,  # Remove when we no longer run on python2 systems
         too-many-instance-attributes,
+        no-name-in-module,
+        use-dict-literal
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
