Disable sudo for localhost auth
Disables sudo for auth task so localhost doesn't have to have root.

--- a/roles/falcon_install/tasks/auth.yml
+++ b/roles/falcon_install/tasks/auth.yml
@@ -7,6 +7,7 @@
   register: falcon
   run_once: yes
   no_log: "{{ falcon_api_enable_no_log }}"
+  become: no
   delegate_to: localhost
 
 - name: Set falcon_cid Block
