fix(falcon_configure): update logic for removing aid
In order to provide backwards compat to existing removal of aid workflows, this commit:
- Moves all the option checking logic to default vars as a dictionary
  - This allows us to make it simpler to see if any options have been set with jinja2
- Update existing configure task to use new options dictionary
- Having a task right after restarting the sensor on a fresh install/config will hit a race condition.
  To account for this, we need to wait until we have an AID present.

So now we can allow for 2 situations:
1 - Proper gold image workflow: install->(configure + remove aid)
2 - Remove the AID as a singleton job

--- a/roles/falcon_configure/tasks/main.yml
+++ b/roles/falcon_configure/tasks/main.yml
@@ -11,10 +11,14 @@
         tasks_from: auth
       # noqa name[missing]
 
+- name: Checks if any options are set
+  ansible.builtin.set_fact:
+    any_option_set: "{{ true if (options | dict2items | selectattr('value', 'ne', omit) | list | length > 0) else false }}"
+
 - name: Linux Configure block
   when:
     - ansible_facts['os_family'] != "Windows"
-    - not falcon_remove_aid
+    - any_option_set
   become: true
   become_user: root
   block:
@@ -24,6 +28,7 @@
 - name: Remove AID block
   when:
     - falcon_remove_aid
+    - not any_option_set
     - ansible_facts['os_family'] != "Windows"
   become: true
   become_user: root
