--- a/roles/falcon_configure/tasks/configure.yml
+++ b/roles/falcon_configure/tasks/configure.yml
@@ -4,17 +4,17 @@
   block:
     - name: CrowdStrike Falcon | Configure Falcon Sensor Options (Linux)
       crowdstrike.falcon.falconctl:
-        cid: "{{ falcon_cid if (falcon_cid != None) else omit }}"
-        provisioning_token: "{{ falcon_provisioning_token if (falcon_provisioning_token != None) else omit }}"
-        apd: "{{ falcon_apd if (falcon_apd != None) else omit }}"
-        aph: "{{ falcon_aph if (falcon_aph != None) else omit }}"
-        app: "{{ falcon_app if (falcon_app != None) else omit }}"
-        trace: "{{ falcon_trace if (falcon_trace != None) else omit }}"
-        feature: "{{ falcon_feature if (falcon_feature != None) else omit }}"
-        message_log: "{{ falcon_message_log if (falcon_message_log != None) else omit }}"
-        billing: "{{ falcon_billing if (falcon_billing != None) else omit }}"
-        tags: "{{ falcon_tags if (falcon_tags != None) else omit }}"
-        backend: "{{ falcon_backend if (falcon_backend != None) else omit }}"
+        cid: "{{ options.cid }}"
+        provisioning_token: "{{ options.provisioning_token }}"
+        apd: "{{ options.apd }}"
+        aph: "{{ options.aph }}"
+        app: "{{ options.app }}"
+        trace: "{{ options.trace }}"
+        feature: "{{ options.feature }}"
+        message_log: "{{ options.message_log }}"
+        billing: "{{ options.billing }}"
+        tags: "{{ options.tags }}"
+        backend: "{{ options.backend }}"
         state: "{{ 'present' if falcon_option_set else 'absent' }}"
       register: falconctl_result
 
@@ -30,9 +30,29 @@
       when:
         - info.falconctl_info.cid
         - falconctl_result.changed
-      become: yes
       # noqa args[module]
       # noqa no-handler
+
+    # Wait for aid to be generated
+    - name: CrowdStrike Falcon | Wait for Falcon Sensor to Generate AID
+      crowdstrike.falcon.falconctl_info:
+        name:
+          - aid
+      register: info
+      retries: 6
+      delay: 10
+      until: info.falconctl_info.aid
+      when:
+        - info.falconctl_info.cid
+        - falconctl_result.changed
+      # noqa no-handler
+
+    - name: CrowdStrike Falcon | Remove Falcon Agent ID (AID) If Building A Primary Image
+      crowdstrike.falcon.falconctl:
+        aid: yes
+        state: absent
+      when:
+        - falcon_remove_aid
 
 # Start of MacOSX Configuration
 - name: CrowdStrike Falcon | Stat Falcon Sensor (macOS)
