--- a/molecule/falcon_configure_remove_aid/verify.yml
+++ b/molecule/falcon_configure_remove_aid/verify.yml
@@ -7,15 +7,15 @@
   tasks:
   - name: Get list of Falcon Sensor Options
     crowdstrike.falcon.falconctl_info:
-    register: info
+    register: info_verify
 
   - name: Verify Falcon Sensor options are set
     ansible.builtin.assert:
       that:
-        - info.falconctl_info.cid
-        - info.falconctl_info.tags
+        - info_verify.falconctl_info.cid
+        - info_verify.falconctl_info.tags
 
   - name: Verify AID is not present
     ansible.builtin.assert:
       that:
-        - not info.falconctl_info.aid
+        - not info_verify.falconctl_info.aid
