fix(falcon_configure): update logic for removing aid (#486)
* fix(falcon_configure): update logic for removing aid

In order to provide backwards compat to existing removal of aid workflows, this commit:
- Moves all the option checking logic to default vars as a dictionary
  - This allows us to make it simpler to see if any options have been set with jinja2
- Update existing configure task to use new options dictionary
- Having a task right after restarting the sensor on a fresh install/config will hit a race condition.
  To account for this, we need to wait until we have an AID present.

So now we can allow for 2 situations:
1 - Proper gold image workflow: install->(configure + remove aid)
2 - Remove the AID as a singleton job

* molecule(falcon_configure): add a new molecule scenario to test proper gold image workflow

* chore: add changelog fragment

* chore: update molecule vars to not collide

* docs: update readme to reflect proper way to prep gold image

--- a/molecule/falcon_configure/verify.yml
+++ b/molecule/falcon_configure/verify.yml
@@ -7,18 +7,18 @@
   tasks:
   - name: Get list of Falcon Sensor Options
     crowdstrike.falcon.falconctl_info:
-    register: info
+    register: info_verify
 
   - name: Verify Falcon Sensor options are set
     ansible.builtin.assert:
       that:
-        - info.falconctl_info.cid
-        - info.falconctl_info.billing
-        - info.falconctl_info.tags
-        - not info.falconctl_info.apd
-        - not info.falconctl_info.aph
-        - not info.falconctl_info.app
-        - not info.falconctl_info.trace
+        - info_verify.falconctl_info.cid
+        - info_verify.falconctl_info.billing
+        - info_verify.falconctl_info.tags
+        - not info_verify.falconctl_info.apd
+        - not info_verify.falconctl_info.aph
+        - not info_verify.falconctl_info.app
+        - not info_verify.falconctl_info.trace
 
   - name: Test Setting Proxy Options
     ansible.builtin.include_role:
@@ -51,13 +51,12 @@
       falcon_app: ""
 
   - name: AID deletion block
-    when: info.falconctl_info.aid
+    when: info_verify.falconctl_info.aid
     block:
       - name: Test Deleting AID master image prep
         ansible.builtin.include_role:
           name: crowdstrike.falcon.falcon_configure
         vars:
-          falcon_option_set: no
           falcon_remove_aid: yes
 
       - name: Get Updated Falcon Sensor Option
