fix(falcon_install): add new gpg key

--- a/roles/falcon_install/vars/main.yml
+++ b/roles/falcon_install/vars/main.yml
@@ -13,6 +13,7 @@ dpkg_packagers:
 
 falcon_gpg_keys:
   - falcon-sensor.gpg
+  - falcon-sensor1.gpg
   - falcon-sensor2.gpg
 
 latest_gpg_key: "{{ falcon_gpg_keys[0] }}"
