fix(falcon_install): add support for provisioning token for master image

--- a/molecule/falcon_configure_remove_aid/converge.yml
+++ b/molecule/falcon_configure_remove_aid/converge.yml
@@ -10,6 +10,7 @@
       vars:
         falcon_option_set: yes
         falcon_cid: "{{ lookup('env', 'FALCON_CID') }}"
+        falcon_provisioning_token: "{{ lookup('env', 'FALCON_PROV_TOKEN') }}"
         falcon_tags: 'molecule,testing'
         falcon_backend: 'bpf'
         falcon_remove_aid: yes
