fix(falcon_configure): fixes issue with unwarranted bool (master image) (#585)
* fix(falcon_configure): fixes issue with unwarranted bool (master image)

Fixes #579

This PR introduces a fix to incorrectly using the |bool filter when
working with prov tokens in master image prep. Also adding the ability
to stop the sensor when working within a master image prep as to prevent
the sensor from potentially updating/restarting via that cloud updates.

* ci: adds testing to ensure provisioning token is set

Prior to this change, we were not checking to see if the prov token was
set which was causing a false positive to occur.

* chore: changelog fragment

* chore: stray from using options dict due to omit specialness

--- a/roles/falcon_configure/tasks/configure.yml
+++ b/roles/falcon_configure/tasks/configure.yml
@@ -58,12 +58,18 @@
     - name: CrowdStrike Falcon | Master Image Prep | Set Provisioning Token (if applicable)
       crowdstrike.falcon.falconctl:
         cid: "{{ options.cid }}"
-        provisioning_token: "{{ options.provisioning_token }}"
+        provisioning_token: "{{ falcon_provisioning_token }}"
         state: present
       when:
         - falcon_remove_aid
-        - options.cid | bool
-        - options.provisioning_token | bool
+        - falcon_provisioning_token is not none and falcon_provisioning_token | length > 0
+
+    - name: CrowdStrike Falcon | Master Image Prep | Stop Falcon Sensor service
+      ansible.builtin.service:
+        name: falcon-sensor
+        state: stopped
+      when:
+        - falcon_remove_aid
 
 # Start of MacOSX Configuration
 - name: CrowdStrike Falcon | Stat Falcon Sensor (macOS)
